src/test/ui/generic-associated-types/parse/issue-67510-6.stderr
error: lifetime in trait object type must be followed by `+`
 --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/parse/issue-67510-6.rs:9:29
  |
9 | fn f1<'a>(arg : Box<dyn X<Y('a) = &'a ()>>) {}  
  |                             ^^

error: invalid use of parenthesized generic arguments, expected angle bracketed (`<...>`) generic arguments
 --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/parse/issue-67510-6.rs:9:27
  |
9 | fn f1<'a>(arg : Box<dyn X<Y('a) = &'a ()>>) {}  
  |                           ^^^^^

warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/parse/issue-67510-6.rs:3:12
  |
3 | #![feature(generic_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: wrong number of lifetime arguments: expected 1, found 0
 --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/parse/issue-67510-6.rs:9:27
  |
9 | fn f1<'a>(arg : Box<dyn X<Y('a) = &'a ()>>) {}  
  |                           ^^^^^^^^^^^^^^ expected 1 lifetime argument

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0107`.
